tobago-theme/src/main/scss/_tobago.scss
/* ... */
tobago-select-many-checkbox {
  display: block;
  @include adjustCustomControlLabel();
  @include radioCheckboxInline();

  &.tobago-label-container {
    .form-check-inline {
      @include inlinePadding();
    }
  }
}

.tobago-selectManyCheckbox {
}

tobago-select-many-listbox {
  display: block;
}

tobago-select-many-shuttle {
  display: block;

  .tobago-body {
    display: flex;
    height: 100%; //size should be the same as the outer custom tag; important for horizontal grid layout

    .tobago-unselected-container, .tobago-selected-container {
      flex-grow: 1;
      flex-basis: 0;
      display: flex;

      div {
        flex-basis: 0;
      }
    }

    .tobago-controls .btn-group-vertical {
      padding-left: $list-inline-padding;
      padding-right: $list-inline-padding;
    }

    .tobago-unselected {
    }
  }

  &.tobago-label-container, .tobago-help-container, .tobago-messages-container {
    > .tobago-body {
      flex: 1 0 0px;
    }
  }
}

/* selectOneChoice ---------------------------------------------------------- */

/* segmentLayout ----------------------------------------------------------- */

tobago-segment-layout {
  /*
  Makes, that the height of the div is set.
  Otherwise floating elements below, may flew into the area of the segmentLayout.
  */
  /*display: inline-block;
  todo: this breaks the general layout in IE11 and others
  */
}

tobago-separator {
  display: flex;
  align-items: center;

  hr {
    flex-grow: 1;
  }

  .tobago-label {
    margin: $hr-margin-y 0.25rem;
  }

  .tobago-separator {
    //this is for TobagoClassUnitTest
  }
}

/* sheet -------------------------------------------------------------- */

tobago-sheet {
  display: flex;
  flex-direction: column;
  margin-bottom: $spacer;

  .tobago-expanded {
  }

  header {
    overflow-x: hidden;
    flex-shrink: 0; //if "column" attribute used: header must remain same height (fix overflow hidden)

    .table {
      margin-bottom: 0;

      th {
        position: relative;
        overflow: hidden;
      }
    }
  }

  header:hover .tobago-resize {
    background-color: $gray-200;
  }

  .tobago-resize {
    position: absolute;
    right: -5px;
    top: 0;
    width: 10px;
    height: 100%;
    z-index: 1;
    cursor: col-resize;
  }

  .tobago-sortable {
    &:after {
      font-family: bootstrap-icons;
      content: $icon-sort;
      font-weight: normal;
      -webkit-font-smoothing: antialiased;
      vertical-align: -0.125em;
      margin-left: 0.5rem;
      opacity: 0.5;
    }

    .tobago-circle-1, .tobago-circle-2, .tobago-circle-3, .tobago-circle-4, .tobago-circle-5, .tobago-circle-6, .tobago-circle-7, .tobago-circle-8, .tobago-circle-9 {
    }

    @mixin tobago-circle($sortIcon, $number, $circleIcon) {
      &.tobago-circle-#{$number}::after {
        content: $sortIcon + $icon-nbsp + $circleIcon;
      }
    }

    &.tobago-ascending {
      &::after {
        content: $icon-sort-ascending;
        opacity: 1;
      }

      @each $number, $circle in $icon-sort-numbers {
        @include tobago-circle($icon-sort-ascending, $number, $circle);
      }
    }

    &.tobago-descending {
      &::after {
        content: $icon-sort-descending;
        opacity: 1;
      }

      @each $number, $circle in $icon-sort-numbers {
        @include tobago-circle($icon-sort-descending, $number, $circle);
      }
    }
  }

  .tobago-body {
    overflow-y: auto;
    flex: 1 1 auto;

    .table {
      margin-bottom: 0; //remove bootstrap styling; margins are set on tobago-sheet

      .tobago-column-panel {
      }

      td {
        overflow: hidden;

        &.tobago-behavior-container {
          display: none;
        }

        @include treeNodeMarginLeftLevel();

        > input.tobago-selected {
          margin-top: ($spacer * 0.75);
          margin-bottom: ($spacer * 0.75);
        }

        > tobago-out {
          display: block;
        }

        > tobago-tree-node {
          display: flex;
          align-items: center;

          @include tobagoTreeNodeToggle();

          .tobago-toggle {
            padding-right: 5px;
          }
        }
      }
    }
  }

  footer {
    display: flex;
    flex-wrap: wrap;

    // XXX TOBAGO-2243 might to be removed, because it's now directly in the new components

    .pagination {
      margin-top: 1rem;
      margin-bottom: 0;

      .tobago-paging {
        cursor: pointer;

        input {
          text-align: center;
          display: none;
          margin: -4px 0;
          width: 3em;
        }
      }
    }
  }
}

.tobago-tableLayout-fixed {
  table-layout: fixed;
}

/* splitLayout ---------------------------------------------------------------------- */
tobago-split-layout {
  display: flex;
}

.tobago-splitLayout {
}

.tobago-splitLayout-horizontal {
  width: .5rem;
  cursor: col-resize;
}

.tobago-splitLayout-horizontal:hover {
  border: dotted #000000 thin;
  z-index: 10000; /* TODO: check, if needed (check also with iframes) */
}

.tobago-splitLayout-vertical {
  height: .5rem;
  cursor: row-resize;
}

.tobago-splitLayout-vertical:hover {
  border: dotted #000000 thin;
  z-index: 10000; /* TODO: check, if needed (check also with iframes) */
}

tobago-tab {
  .nav-link:not([href]):not([tabindex]) {
    /* fix .nav-links without 'href'; bootstrap tab only works if 'href' is set */
    &.active {
      color: $nav-tabs-link-active-color;
      cursor: pointer;
    }

    &:not(.active) {
      color: $link-color;
      cursor: pointer;

      &:hover {
        color: $link-hover-color;
      }
    }

    &.disabled {
      color: $nav-link-disabled-color;
      cursor: not-allowed;

      &:focus, &:hover {
        color: $nav-link-disabled-color;
      }
    }
  }
}
/* ... */

